--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
+* {
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+}
+
 body {
   font-family: sans-serif;
   margin: 0;
@@ -6,4 +13,9 @@ body {
 
 .alert {
   margin: 30px;
+}
+
+.container {
+  margin-right: 0;
+  padding-right: 0;
 }
